Force left-aligned header text, and fix width scaling issues below screen width of 1025px

--- a/docs/css/elements/news-card.css
+++ b/docs/css/elements/news-card.css
@@ -64,8 +64,8 @@
     }
 
     img {
-      width: 100% !important;
       max-width: none;
+      align-self: center;
     }
   }
 }
